rm bg mentions, use pic, profile-pic, /upload/pic, /upload/profile-pic
